my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAINCOMP/EAINCOMP.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAINCOMP.dml:6:7: In test
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAINCOMP.dml:9:1: error EAINCOMP: incompatible array declarations: mismatching index variables
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAINCOMP.dml:11:1: conflicting declaration
